[package]
name = "ask"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
cliclack = "0.3.5"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
