[package]
name = "ask"
version = "0.1.6"
edition = "2021"
repository = "https://github.com/wheynelau/ask-rs.git"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
cliclack = "0.3.5"
openssl = { version = "0.10.71", features = ["vendored"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dist]
allow-dirty = ["ci", "msi"]
