[package]
name = "ask"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/wheynelau/ask-rs.git"

[dependencies]
atty = "0.2"
clap = { version = "4.5.40", features = ["derive"] }
cliclack = "0.3.6"
reqwest = { version = "0.12.20", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
futures-util = "0.3.30"
indicatif = "0.17.11"
termimad = "0.33.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
